--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -1,3 +1,32 @@
 {
-  "message": "hello i18n !!"
+  "topNav": {
+    "home": "主页",
+    "about": "关于本站",
+    "rank": "排行榜",
+    "no": "第{msg}期"
+  },
+  "rank": {
+    "title": "【兎老师】碧蓝航线舰娘强度榜第{msg}期",
+    "retrofitted": "改",
+    "raw": "本期原文：",
+    "standard": "评定标准：伤害输出 > 生存表现 > 队伍辅助 | 榜单仅供叁考练船，不代表舰娘的绝对强度",
+    "liveroom": "哔哩哔哩直播间："
+  },
+  "formation": {
+    "main": "主力舰队",
+    "vanguard": "先锋舰队",
+    "submarine": "潜艇舰队"
+  },
+  "ability": {
+    "炮": "主炮+1/炮击伤害优秀",
+    "雷": "雷伤优秀",
+    "弹": "弹幕优秀",
+    "空": "防空优秀",
+    "爆": "对自爆优秀",
+    "防": "生存/机动",
+    "奶": "耐久回复",
+    "零": "可做零破低耗",
+    "防辅": "防御BUFF",
+    "伤辅": "增伤BUFF"
+  }
 }
