--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -1,4 +1,10 @@
 {
+  "title": {
+    "main": "【兎老师】碧蓝航线舰娘强度榜",
+    "about": " - 关于本站",
+    "rank": " - 排行榜",
+    "editor": " - 编辑器"
+  },
   "topNav": {
     "home": "主页",
     "about": "关于本站",
