home page locale

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,10 @@
     "rank": " - Rank",
     "editor": " - Editor"
   },
+  "home": {
+    "title": "【Usagisensei】Azur Lane Ship Rank (Web version)",
+    "link": "Usagisensei's bilibili articles"
+  },
   "topNav": {
     "home": "Home",
     "about": "About",
