--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -5,6 +5,10 @@
     "rank": " - 排行榜",
     "editor": " - 编辑器"
   },
+  "home": {
+    "title": "【兎老师】碧蓝航线舰娘强度榜（网页版）",
+    "link": "兔老师哔哩哔哩专栏传送门"
+  },
   "topNav": {
     "home": "主页",
     "about": "关于本站",
