--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -9,6 +9,40 @@
     "title": "【兎老师】碧蓝航线舰娘强度榜（网页版）",
     "link": "兔老师哔哩哔哩专栏传送门"
   },
+  "about": {
+    "site": {
+      "title": "本站说明",
+      "line1": "本站仅将兔老师强度榜以网页的形式重新实现，榜单资料兔老师全权拥有。",
+      "line2": "本站游戏图像素材取自Wiki等网站。",
+      "line3": "本站为个人练习项目，若有大佬想参与欢迎联系。",
+      "line4": "如有任何bug或是资料错误等，欢迎在github直丢issues。"
+    },
+    "rank": {
+      "title": "榜单说明",
+      "line1": "榜单仅供参考练船，不代表舰娘的绝对强度，建议以副本需求和阵容搭配选择舰娘。",
+      "line2": "榜单舰娘为同舰型之间的排名对比，如驱逐不跟轻巡比，且不考虑养成成本和油耗等。",
+      "line3": "舰娘的强度需要一定的装备、技能和觉醒等级支撑，强度梯度以副本开荒强度实际表现为基准。",
+      "line4": "榜单评定标准：伤害输出＞生存表现＞队伍辅助，每只舰娘的定位用处都不一样，伤害不是唯一的强度评定标准。",
+      "line5": "各期榜单变动及详细资料请至兔老师bilibili原帖查看。"
+    },
+    "tier": {
+      "title": "梯度说明",
+      "name0": "舰队核心",
+      "desc0": "碧蓝最强阵容的核心选手，天选之子。",
+      "name1": "推图主力",
+      "desc1": "可以与 T0 相知匹敌的强度，推图主力，劳模。",
+      "name2": "次选主力",
+      "desc2": "同样是推图主力实力选手，属性优秀，但是因为一些能力上的不足暂时留在T2。",
+      "name3": "候补主力",
+      "desc3": "自身优秀的属性，在没有适合的主图阵容可以选择此梯度。",
+      "name4": "一般推荐",
+      "desc4": "我是分割线。",
+      "name5": "选择练船",
+      "desc5": "虽然能力不高，但是努力的舰娘仍然凭借自身一些特点获得上场的机会。",
+      "namen": "为爱发电",
+      "descn": "微薄的存在感 因为兎老师不忍心让她们不被玩家熟知而带到了强度榜上， 弱小的舰娘正等待着为爱发电的提督发掘她们的潜力。"
+    }
+  },
   "topNav": {
     "home": "主页",
     "about": "关于本站",
