--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -61,6 +61,11 @@
     "vanguard": "先锋舰队",
     "submarine": "潜艇舰队"
   },
+  "evaluation": {
+    "0": "伤害",
+    "1": "生存",
+    "2": "辅助"
+  },
   "ability": {
     "炮": "主炮+1/炮击伤害优秀",
     "雷": "雷伤优秀",
