--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -245,6 +245,7 @@
     "飞龙": "Hiryuu",
     "翔鹤": "Shoukaku",
     "瑞鹤": "Zuikaku",
+    "大凤": "Taihou",
     "明石": "Akashi",
     "Z1": "Z1",
     "Z23": "Z23",
